add Delete account method on doc test and controller
